--- a/messManager/src/main/resources/application.properties
+++ b/messManager/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port= 8090
-spring.datasource.url=jdbc:mysql://localhost:3308/messmanager?serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password= @(Nayem7663)@
-spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/messmanager
+spring.datasource.username= postgres
+spring.datasource.password= root
+spring.datasource.driver-class-name= org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto= update
 
